--- a/pre/scss/components/_form.scss
+++ b/pre/scss/components/_form.scss
@@ -17,6 +17,10 @@ input {
         @include capital;
         color: color(gray-6);
     }
+
+    &[disabled] {
+        color: color(gray-7);
+    }
 }
 
 .input-group {
