--- a/pre/scss/layout/_main.scss
+++ b/pre/scss/layout/_main.scss
@@ -1,5 +1,5 @@
 main {
-    margin-top: size(85);
+    margin-top: size(84);
     background-color: color(primary);
     border-bottom-left-radius: size(30);
     padding: size(40) 0;
@@ -18,13 +18,14 @@ main {
     // PC ~ 1440
     @include max-to(pc) {
         section {
-            padding: size(20) size(20);
+            padding: size(20);
         }
     }
 
     // mobile ~ 516
     @include max-to(mobile) {
         margin-top: size(60);
+        padding-top: 0;
     }
 }
 
@@ -177,6 +178,16 @@ main {
 
     // mobile ~ 516
     @include max-to(mobile) {
+        .swiper {
+            &-button-next {
+                right: size(16);
+            }
+
+            &-button-prev {
+                right: size(96);
+            }
+        }
+
         .mask {
             top: calc(((100svw - size(32)) * .949) - size(60) + size(1));
         }
@@ -391,6 +402,16 @@ main {
 
         .swiper {
             border-radius: size(30) size(30) 0 0;
+        }
+    }
+
+
+    // mobile ~ 516
+    @include max-to(mobile) {
+        padding: size(16);
+
+        .container {
+            padding: 0;
         }
     }
 }
