--- a/pre/scss/pages/_personal.scss
+++ b/pre/scss/pages/_personal.scss
@@ -87,6 +87,10 @@
                                 max-width: size(108);
                                 text-align: center;
                                 padding: size(10);
+
+                                &[disabled] {
+                                    color: white;
+                                }
                             }
                         }
 
